      replying to all, sender, list-only.

    - ~mu4e~ now shows unread/all counts for bookmarks in the main screen. This is
      on by default, but can be disabled by setting ~:hide-unread~ in the bookmark
      ~plist~ to ~t~. For speed-reasons, these counts do _not_ filter out duplicates
      or messages that have been removed from the filesystem behind mu4e's back.

    - The mu4e <-> mu intreaction has been rewritten to communicate using
      s-expressions, with a repl for testing. If you have readline installed,
      you also get history.

*** toys

    - Updated the ~mug~ toy UI to use Webkit2/GTK+. Note that this is just a toy
      which is not meant for distribution. ~msg2pdf~ is disabled for now.

** 1.2

   After a bit over a year since version 1.0, here is version 1.2. This is
   mostly a bugfix release, but there are also a number of new features.

*** mu

    - Substantial (algorithmic) speed-up of message-threading; this also (or
      especially) affects mu4e, since threading is the default. See commit
      eb9bfbb1ca3c for all the details, and thanks to Nicolas Avrutin.

    - The query-parser now generates better queries for wildcard searches, by
      using the Xapian machinery for that (when available) rather than
      transforming into regexp queries.

    - The perl backend is hardly used and will be removed; for now we just
      disable it in the build.

    - Allow outputting messages in json format, closely following the sexp
      output. This adds an (optional) dependency on the Json-Glib library.

*** mu4e

    - Bump the minimal required emacs version to 24.4. This was already de-facto
      true, now it is enforced.

    - In mu4e-bookmarks, allow the `:query` element to take a function (or
      lambda) to dynamically generate the query string.

    - There is a new message-view for mu4e, based on the Gnus' article-view.
      This bring a lot of (but not all) of the very rich Gnus article-mode